--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build furnace
 
 on:
   push:
-    branches: [master, merge-translations-TIAtune-and-stuff]
+    branches: master
   pull_request:
     branches: master
 
