--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -822,6 +822,7 @@ src/engine/importExport/wopn.cpp
 src/engine/importExport/xm.cpp
 src/engine/importExport/y12.cpp
 
+src/engine/importExport/p.cpp
 src/engine/importExport/p86.cpp
 src/engine/importExport/pdx.cpp
 src/engine/importExport/ppc.cpp
