--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,12 +8,14 @@ else {
 }
 
 android {
+    //noinspection ExpiredTargetSdkVersion
     compileSdkVersion 26
     defaultConfig {
         if (buildAsApplication) {
             applicationId "org.tildearrow.furnace"
         }
         minSdkVersion 21
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 26
         versionCode 214
         versionName "0.6.5"
