--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         if (buildAsApplication) {
-            applicationId "org.tildearrow.furnace"
+            applicationId "org.ltva.furnaceB"
         }
         minSdkVersion 21
         //noinspection ExpiredTargetSdkVersion
