--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,7 +32,7 @@ jobs:
         package_name="furnaceB-${GITHUB_SHA}"
         package_ext=""
 
-        package_name="${package_name}-AndroidDEBUG"
+        package_name="${package_name}-Android"
         package_ext=".tar.gz"
 
         echo "Package identifier: ${package_name}"
@@ -58,13 +58,28 @@ jobs:
         ./gradlew assembleRelease
         ./gradlew --stop
         cd ../..
-        
+
+    # do i really trust the Github Marketplace?
+    - name: Sign the APK
+      uses: r0adkll/sign-android-release@v1
+      # ID used to access action output
+      id: sign_app
+      with:
+        releaseDirectory: ${PWD}/android/app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNINGKEYBASE64 }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEYSTOREPASSWORD }}
+
+    env:
+      # override default build-tools version (29.0.3) -- optional
+      BUILD_TOOLS_VERSION: "30.0.2"
     - name: Package
       run: |
 
         mkdir -p target/furnace
+        # if this fails i'm going to present top gear
 
-        mv ${PWD}/android/app/build/outputs/apk/release/app-release-unsigned.apk target/furnace/${{ steps.package-identify.outputs.id }}.apk
+        mv ${{ steps.sign_app.outputs.signedReleaseFile }} target/furnace/${{ steps.package-identify.outputs.id }}.apk
         pushd target/furnace
 
         cp ../../LICENSE .
