--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -67,7 +67,7 @@ jobs:
       # ID used to access action output
       id: sign_app
       with:
-        releaseDirectory: ${{ steps.build.outputs.machete }}/android/app/build/outputs/apk/release/
+        releaseDirectory: android/app/build/outputs/apk/release/
         signingKeyBase64: ${{ secrets.SIGNINGKEYBASE64 }}
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEYSTOREPASSWORD }}
