--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: 
       - master
-      - ay-timer
+      - SID3
   pull_request:
     branches:
       - master
-      - ay-timer
+      - SID3
 
 defaults:
   run:
@@ -99,4 +99,4 @@ jobs:
       uses: actions/upload-artifact@v4.3.0
       with:
         name: ${{ steps.package-identify.outputs.id }}
-        path: ${{ steps.package-identify.outputs.filename }
+        path: ${{ steps.package-identify.outputs.filename }}
